--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -35,3 +35,33 @@
         </div>
     </div> <!-- /container -->
 {% endblock %}
+
+{% block script %}
+      <script>
+    $(function () {
+        $('.captcha').click(function(){
+            console.log('click');
+            $.getJSON("/captcha/refresh/",
+                  function(result){
+                $('.captcha').attr('src', result['image_url']);
+                $('#id_captcha_0').val(result['key'])
+          })
+        })
+
+        $('#id_captcha_1').blur(function () {
+            json_data={
+                'response':$('#id_captcha_1').val(), // 获取输入框和隐藏字段id_captcha_0的数值
+                'hashkey':$('#id_captcha_0').val()
+            }
+            $.getJSON('/ajax_val',json_data,function (data) {
+                $('#captcha_status').remove()
+                if(data['status']){
+                    $('#id_captcha_1').after('<span id="captcha_status" >*验证码正确</span>')
+                }else{
+                    $('#id_captcha_1').after('<span id="captcha_status" >*验证码错误</span>')
+                }
+            })
+        })
+    })
+    </script>
+{% endblock %}
