开发资产管理功能

--- a/templates/base.html
+++ b/templates/base.html
@@ -149,13 +149,13 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     <li>
-                        <a href="javascript:;" data-toggle="collapse" data-target="#demo1"><i class="fa fa-fw fa-arrows-v"></i> 下拉菜单 <i class="fa fa-fw fa-caret-down"></i></a>
+                        <a href="javascript:;" data-toggle="collapse" data-target="#demo1"><i class="fa fa-fw fa-arrows-v"></i> 资产管理 <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="demo1" class="collapse">
                             <li>
-                                <a href="javascript:;">子菜单1 </a>
+                                <a href="/asset/server">服务器 </a>
                             </li>
                             <li>
-                                <a href="javascript:;">子菜单2</a>
+                                <a href="/asset/group_config">分组定义</a>
                             </li>
                         </ul>
                     </li>
